# topdown

./: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  topdown-0.0.1.vsix  topdown-0.1.0.vsix  tsconfig.json  vscode-extension-quickstart.md
.github/workflows/: integrate_dedupe_ci.yml  iot_mqtt_auth_integration.yml  iot_mtls_integration.yml  iot_tls_integration.yml  lora_smoke.yml  plot_data_qc.yml  topdown-impact.yml  validate-config.yml  wandb_smoke.yml
.topdown/: config.json
configs/iot/: secure_example.yaml
docs/: data_qc.md  dev_setup.md  iot_security.md  minhash_optimization.md  train_lora.md  train_wandb.md
docs/arxiv/: README.md  bibtex.bib  metadata.csv
examples/taskrunner/: taskrunner.py
experiments/minhash_bench_scaled/: minhash_benchmark_scaled_results.csv  minhash_np128_b16_s85.jsonl  minhash_np128_b16_s90.jsonl  minhash_np128_b16_s95.jsonl  minhash_np128_b32_s85.jsonl  minhash_np128_b32_s90.jsonl  minhash_np128_b32_s95.jsonl  minhash_np128_b8_s85.jsonl  minhash_np128_b8_s90.jsonl  minhash_np64_b16_s85.jsonl  minhash_np64_b16_s90.jsonl  minhash_np64_b16_s95.jsonl  minhash_np64_b32_s85.jsonl  minhash_np64_b32_s90.jsonl  minhash_np64_b32_s95.jsonl  minhash_np64_b8_s85.jsonl  minhash_np64_b8_s90.jsonl
python/: test_topdown_cli.py  test_topdown_runtime.py  topdown_cli.py  topdown_export.py  topdown_runtime.py
src/: extension.ts
tests/: conftest.py  test_iot_http_auth.py  test_iot_mqtt_tls.py  test_lora_finetune_smoke.py  test_minhash_fast.py  test_wandb_integration.py
(+37 files in other folders)
