[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topdown-cli"
version = "0.1.0"
description = "CLI validator for Top-Down parametric code configs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Top-Down", email = "hello@topdown.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
topdown = "topdown_cli:main"

[project.urls]
Homepage = "https://github.com/H-XX-D/topdown"
Repository = "https://github.com/H-XX-D/topdown"
Issues = "https://github.com/H-XX-D/topdown/issues"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"
